<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/butt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RETURN"
       />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleSettings"
        android:textSize="30sp"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
         />


    <Button
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:text="@string/button1"
        android:layout_marginTop="120dp"
        android:layout_centerHorizontal="true"
        android:background="#FF9800"
    />

    <Button
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:text="@string/button3"
        android:layout_marginTop="230dp"
        android:layout_centerHorizontal="true"
        android:background="#FF5722"
        />

    <Button
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:text="@string/button4"
        android:layout_marginTop="340dp"
        android:layout_centerHorizontal="true"
        android:background="#F44336"
        />

</RelativeLayout>